--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,9 @@
 /__pycache__/
 /.idea/
 /.github/
-*.txt
-keno_api.egg-info/PKG-INFO
-dist/keno-api-0.0.1.tar.gz
+/dist/
+
 *.gz
-src_api.egg-info/PKG-INFO
+*.txt
 *.pyc
-src_api.egg-info/PKG-INFO
+
